src/main/metadata/objects/Translation_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>MD__c</fullName>
        <label>MD</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Name__c</fullName>
        <label>Picklist Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Translation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Translation Dictionary</label>
    <nameField>
        <label>Translation Dictionary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translation Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>